Refactoring to use virtual threads