@@ -32,7 +32,7 @@
             <version>1.0.1</version>
         </dependency>
       
-      <dependency>
+        <dependency>
             <groupId>dev.uncomplex</groupId>
             <artifactId>uncomplex-jwt</artifactId>
             <version>1.0.0</version>
@@ -59,7 +59,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
 
 
